--- a/src/index.css
+++ b/src/index.css
@@ -154,6 +154,9 @@ p {
 .bg-silver {
   background-color: #c0c0cc;
 }
+.text-silver {
+  color: #595962;
+}
 .selectOption {
   position: absolute;
   top: 80px;
@@ -170,6 +173,7 @@ p {
 }
 .hover_card_class {
   transition: 0.5s ease-in-out;
+  min-height: 230px !important;
 }
 .hover_card_class:hover {
   box-shadow: 0 0.5rem 1rem rgba(194, 187, 187, 0.15) !important;
@@ -223,6 +227,12 @@ p {
 }
 .index {
   z-index: 1;
+}
+.teacherCard {
+  border-radius: 6px;
+  font-size: 1.2rem;
+}
+.teacherCard:hover {
 }
 .border-color-success {
   border-color: #34c3ff !important;
