--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -13,7 +13,7 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  min-height: 616.5px;
+  min-height: 100vh;
 }
 
 .content {
