--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -23,42 +23,11 @@
   flex-direction: column;
   align-items: center;
   border-radius: 20px;
-}
-
-.content {
   position: relative;
   border-radius: 6px;
   cursor: pointer;
   font-family: cursive;
-}
-
-.content::before {
-  content: "";
-  width: 104%;
-  height: 102%;
-  border-radius: 8px;
-  position: absolute;
-  top: -1%;
-  left: -2%;
-  animation: spin 2.5s linear infinite;
-  z-index: -1;
-}
-.content:hover::before {
-  background-image: linear-gradient(
-    var(--rotate),
-    #95afc0,
-    #4834d4,
-    #c7ecee 43%,
-    #130f40
-  );
-}
-@keyframes spin {
-  0% {
-    --rotate: 0deg;
-  }
-  100% {
-    --rotate: 360deg;
-  }
+  border: 1px solid #34c3ff;
 }
 
 @media (min-width: 767px) {
